# near-infernet-sdk

./: Cargo.toml  README.md  deploy.sh
src/: coordinator.rs  delegator.rs  lib.rs  manager.rs  sign_coordinator.rs
src/consumer/: base.rs  callback.rs  mod.rs  subscription-consumer.rs  subscription.rs
src/utils/: ecdsa.rs  events.rs  mod.rs
