[package]
name = "near-infernet-sdk"
version = "1.0.0"
authors = ["Near Foundation <ken@near.foundation>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "4.1.1", features = ["unstable"] }
uint = { version = "0.9.3", default-features = false }


[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = ["sandbox-rs"]
